--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
   },
   "dependencies": {
     "@typescript-eslint/parser": "^5.49.0",
-    "classnames": "^2.3.2"
+    "classnames": "^2.3.2",
+    "cz": "^1.8.2"
   },
   "devDependencies": {
     "@babel/runtime": "^7.20.13",
