--- a/package.json
+++ b/package.json
@@ -59,6 +59,10 @@
     "@typescript-eslint/parser": "^5.49.0",
     "classnames": "^2.3.2",
     "cz": "^1.8.2",
+    "dayjs": "^1.11.7",
+    "enzyme": "^3.11.0",
+    "jest-axe": "^7.0.0",
+    "mockdate": "^3.0.5",
     "rc-progress": "^3.4.1"
   },
   "devDependencies": {
@@ -73,7 +77,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/classnames": "^2.3.1",
+    "@types/enzyme": "^3.10.12",
     "@types/jest": "^29.4.0",
+    "@types/jest-axe": "^3.5.5",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@umijs/lint": "^4.0.0",
     "babel-jest": "^29.4.0",
