--- a/package.json
+++ b/package.json
@@ -60,12 +60,11 @@
     "classnames": "^2.3.2",
     "cz": "^1.8.2",
     "dayjs": "^1.11.7",
-    "enzyme": "^3.11.0",
     "jest-axe": "^7.0.0",
     "mockdate": "^3.0.5",
     "rc-field-form": "^1.27.4",
-    "rc-progress": "^3.4.1",
-    "rc-menu": "^9.8.2"
+    "rc-menu": "^9.8.2",
+    "rc-progress": "^3.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -79,9 +78,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/classnames": "^2.3.1",
-    "@types/enzyme": "^3.10.12",
     "@types/jest": "^29.4.0",
     "@types/jest-axe": "^3.5.5",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@umijs/lint": "^4.0.0",
     "babel-jest": "^29.4.0",
