--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cheesi",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "private": false,
   "description": "test",
   "license": "MIT",
@@ -17,6 +17,7 @@
     "build:watch": "father dev",
     "clean": "ts-node ./scripts/deleteLessPath.ts",
     "commit": "cz",
+    "deploy": "gh-pages -d docs-dist",
     "dev": "dumi dev",
     "docs:build": "dumi build",
     "doctor": "father doctor",
@@ -87,9 +88,10 @@
     "babel-jest": "^29.4.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "dumi": "^2.0.2",
+    "dumi": "^2.1.10",
     "eslint": "^8.23.0",
     "father": "^2.30.23",
+    "gh-pages": "^5.0.0",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.0",
